# rust-wasm-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build.fish
scripts/: build.fish  build_release
src/: lib.rs
src/utils/: panic_hook.rs
www/: index.html  style.css
