[package]
name = "rust-wasm-template"
version = "0.1.0"
authors = ["Mathias Iversen <contact@mathiasiversen.com>"]
edition = "2018"
description = ""
repository = ""
license = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
